external/lmgc90_dev-fortran_lib/src/ChiPy/shared/wrap_overall.h

/**
 * @fn void TimeEvolution_SetTimeStep(double value)
 * @brief Set value of the time step
 *
 * @cond PYDOC
 * python usage : TimeEvolution_SetTimeStep(dt)
 * @param[in] dt (double) : value of time step
 * @endcond
 *
 * @cond CDOC
 * @param[in] value (double) : value of time step
 * @endcond
 */
 extern "C" void TimeEvolution_SetTimeStep(double value);
/**
 * @fn void TimeEvolution_IncrementStep(void)
 * @brief Increment curent time, time step and eventually initialize NR loop counter
 *
 * @cond PYDOC
 * python usage : TimeEvolution_IncrementStep()
 * @endcond
 */
 extern "C" void TimeEvolution_IncrementStep(void);
/**
 * @fn void TimeEvolution_UpdateStep(void)
 * @brief update the initial time to the current time
 *
 * @cond PYDOC
 * python usage : TimeEvolution_UpdateStep()
 * @endcond
 */
 extern "C" void TimeEvolution_UpdateStep(void);
/**
 * @fn void TimeEvolution_DisplayStep(void)
 * @brief Display time evolution step informations 
 *
 * @cond PYDOC
 * python usage : TimeEvolution_DisplayStep()
 * @endcond
 */
 extern "C" void TimeEvolution_DisplayStep(void);
/**
 * @fn void TimeEvolution_SetInitialStep(int ivalue)
 * @brief Set the rank of the first time step
 *
 * @cond PYDOC
 * python usage : TimeEvolution_SetInitialStep(first_step)
 * @param[in] first_step (integer) : rank of the first time step
 * @endcond
 *
 * @cond CDOC
 * @param[in] ivalue (int) :  rank of the first time step
 * @endcond
 */
 extern "C" void TimeEvolution_SetInitialStep(int ivalue);
/**
 * @fn void TimeEvolution_SetInitialTime(double value)
 * @brief Set initial time
 *
 * @cond PYDOC
 * python usage : TimeEvolution_SetInitialTime(t_init)
 * @param[in] t_init (double) : initial time
 * @endcond
 *
 * @cond CDOC
 * @param[in] value (double) : initial time
 * @endcond
 */
 extern "C" void TimeEvolution_SetInitialTime(double value);
/**
 * @fn double TimeEvolution_GetTime(void)
 * @brief get current time
 *
 * @cond PYDOC
 * python usage : time = TimeEvolution_GetTime()
 * @return time (double) : current time
 * @endcond
 *
 * @cond CDOC
 * @return time (double) : current time
 * @endcond
 */
 extern "C" double TimeEvolution_GetTime(void);
/**
 * @fn double TimeEvolution_GetTimeStep(void)
 * @brief get current time step
 *
 * @cond PYDOC
 * python usage : dt = TimeEvolution_GetTimeStep()
 * @return dt (double) : time step
 * @endcond
 *
 * @cond CDOC
 * @return dt (double) : time step
 * @endcond
 */
 extern "C" double TimeEvolution_GetTimeStep(void);
/**
 * @fn int TimeEvolution_GetStep(void)
 * @brief get current step number
 *
 * @cond PYDOC
 * python usage : it = TimeEvolution_GetStep()
 * @return it (int) : current step number
 * @endcond
 *
 * @cond CDOC
 * @return it (int) : current step number
 * @endcond
 */
 extern "C" int TimeEvolution_GetStep(void);
/**
 * @fn void TimeEvolution_WriteLastDof(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : TimeEvolution_WriteLastDof()
 * @endcond
 */
 extern "C" void TimeEvolution_WriteLastDof(void);
/**
 * @fn void TimeEvolution_WriteOutDof(int Nstep_writeDof=1)
 * @brief
 *
 * @cond PYDOC
 * python usage : TimeEvolution_WriteOutDof(Nstep_writeDof)
 * @param[in] Nstep_writeDof (integer) : periodicity of DOF write
 * @endcond
 *
 * @cond CDOC
 * @param[in] Nstep_writeDof (int) : periodicity of DOF write
 * @endcond
 */
 extern "C" void TimeEvolution_WriteOutDof(int Nstep_writeDof=1);
/**
 * @fn void TimeEvolution_DisplayOutDof(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : TimeEvolution_DisplayOutDof()
 * @endcond
 */
 extern "C" void TimeEvolution_DisplayOutDof(void);
/**
 * @fn void TimeEvolution_WriteLastRnod(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : TimeEvolution_WriteLastRnod()
 * @endcond
 */
 extern "C" void TimeEvolution_WriteLastRnod(void);
/**
 * @fn void TimeEvolution_WriteOutRnod(int entier)
 * @brief
 *
 * @cond PYDOC
 * python usage : TimeEvolution_WriteOutRnod(nstep)
 * @param[in] nstep (integer) : a freq of writing
 * @endcond
 *
 * @cond CDOC
 * @param[in] nstep (int) : a freq of writing
 * @endcond
 */
 extern "C" void TimeEvolution_WriteOutRnod(int entier);
/**
 * @fn void TimeEvolution_DisplayOutRnod(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : TimeEvolution_DisplayOutRnod()
 * @endcond
 */
 extern "C" void TimeEvolution_DisplayOutRnod(void);
/**
 * @fn void TimeEvolution_WriteLastVlocRloc(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : TimeEvolution_WriteLastVlocRloc()
 * @endcond
 */
 extern "C" void TimeEvolution_WriteLastVlocRloc(void);
/**
 * @fn void TimeEvolution_WriteOutVlocRloc(int Nstep_writeVlocRloc=1)
 * @brief
 *
 * @cond PYDOC
 * python usage : TimeEvolution_WriteOutVlocRloc(nstep)
 * @param[in] nstep (integer) : a freq of writing
 * @endcond
 *
 * @cond CDOC
 * @param[in] nstep (int) : a freq of writing
 * @endcond
 */
 extern "C" void TimeEvolution_WriteOutVlocRloc(int Nstep_writeVlocRloc=1);
/**
 * @fn void TimeEvolution_DisplayOutVlocRloc(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : TimeEvolution_DisplayOutVlocRloc()
 * @endcond
 */
 extern "C" void TimeEvolution_DisplayOutVlocRloc(void);
/**
 * @fn void TimeEvolution_WriteLastGPV(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : TimeEvolution_WriteLastGPV()
 * @endcond
 */
 extern "C" void TimeEvolution_WriteLastGPV(void);
/**
 * @fn void TimeEvolution_WriteOutGPV(int entier)
 * @brief
 *
 * @cond PYDOC
 * python usage : TimeEvolution_WriteOutGPV(nstep)
 * @param[in] nstep (integer) : a freq of writing
 * @endcond
 *
 * @cond CDOC
 * @param[in] nstep (int) : a freq of writing
 * @endcond
 */
 extern "C" void TimeEvolution_WriteOutGPV(int entier);
/**
 * @fn void TimeEvolution_ReadIniDof(int num=0)
 * @brief Read header of a DOF file
 *
 * @cond PYDOC
 * python usage : TimeEvolution_ReadIniDof(num=0)
 * @param[in] num (integer) : num of file to read
 * @endcond
 *
 * @cond CDOC
 * @param[in] num (int) : num of a file to read
 * @endcond
 *
 */
 extern "C" void TimeEvolution_ReadIniDof(int num=0);
/**
 * @fn void TimeEvolution_ReadIniVlocRloc(int num=0)
 * @brief Read header of a VlocRloc file
 *
 * @cond PYDOC
 * python usage : TimeEvolution_ReadIniVlocRloc(num=0)
 * @param[in] num (integer) : num of file to read
 * @endcond
 *
 * @cond CDOC
 * @param[in] num (int) : num of a file to read
 * @endcond
 *
 */
 extern "C" void TimeEvolution_ReadIniVlocRloc(int num=0);
/**
 * @fn void TimeEvolution_ReadIniGPV(int num=0)
 * @brief Read header of a GPV file
 *
 * @cond PYDOC
 * python usage : TimeEvolution_ReadIniGPV(num=0)
 * @param[in] num (integer) : num of file to read
 * @endcond
 *
 * @cond CDOC
 * @param[in] num (int) : num of a file to read
 * @endcond
 *
 */
 extern "C" void TimeEvolution_ReadIniGPV(int num=0);
/*
Newton Raphson policy
*/


/**
 * @fn void NewtonRaphson_Initialize(double tol)
 * @brief initialize Newton Raphson Loop
 *
 * @cond PYDOC
 * python usage : NewtonRaphson_Initialize(tol)
 * @param[in] tol (double) : tolerance
 * @endcond
 *
 * @cond CDOC
 * @param[in] tol (double) : tolerance
 * @endcond
 */
 extern "C" void NewtonRaphson_Initialize(double value);
/**
 * @fn int NewtonRaphson_CheckConvergence(double norm)
 * @brief check if Newton Raphson loop converges
 *
 * @cond PYDOC
 * python usage : iconv = NewtonRaphson_CheckConvergence(norm)
 * @param[in] norm (double) : value to check
 * @return iconv (integer) : convergence status
 * @endcond
 *
 *   - iconv = 0 : converges  
 *   - iconv = 1 : unknown  
 *   - iconv = 2 : diverges  
 *
 * @cond CDOC
 * @return iconv (int) : convergence status
 * @endcond
 */
 extern "C" int NewtonRaphson_CheckConvergence(double value);
/**
 * @fn int NewtonRaphson_ComputeTimeStep(void)
 * @brief manages time step evolution depending on newton raphson convergence
 *
 * @cond PYDOC
 * python usage : itodo = NewtonRaphson_ComputeTimeStep()
 * 
 * @return itodo (integer) : what to do now
 * @endcond
 *
 * - itodo = 0 : just keep going (time step may have been modified)
 * - itodo = 1 : redo time step (time step has been decreased)
 * - itodo = 2 : it's hopeless just stop where you are
 *
 * @cond CDOC
 * @return itodo (int) : what to do now
 * @endcond
 */
 extern "C" int NewtonRaphson_ComputeTimeStep(void);
/**
 * @fn void NewtonRaphson_SetMinTimeStep(double value)
 * @brief Set value of the mininum possible time step
 *
 * @cond PYDOC
 * python usage : NewtonRaphson_SetMinTimeStep(dt)
 * @param[in] dt (double) : minimum value of time step
 * @endcond
 *
 * \n Needed only if adaptive time step feature is used\n 
 *
 * @cond CDOC
 * @param[in] value (double) : minimum value of time step
 * @endcond
 */
 extern "C" void NewtonRaphson_SetMinTimeStep(double value);